Fixed alignment

--- a/src/components/Portfolio/About.css
+++ b/src/components/Portfolio/About.css
@@ -118,9 +118,9 @@
 
 .ME-image img {
     float: right;
-    margin-top: 5px;
     margin-right: 20px;
-    width: 25%;
+    width: 180px;
+    height: auto;
 }
 
 .about-me-paragraph-4 {
